2004-05-12 Michael Bunk <kleinerwurm@gmx.net>

	* moved from TEI P3 (SGML) to TEI P4 (XML)
