@@ -17,7 +17,7 @@
         </respStmt>
       </titleStmt>
       <editionStmt>
-        <edition>1.2</edition>
+        <edition>1.3</edition>
       </editionStmt>
       <publicationStmt>
         <publisher>freedict.de</publisher>
